OpenLDAP 2.2 Change Log

OpenLDAP 2.2.14 Engineering
	Fixed back-bdb ignore deadlock bug (ITS#3188)
	Fixed back-bdb pagedResults no end cookie bug (ITS#3161)
	Fixed back-bdb pagedResults clear controls bug (ITS#3182)
	Fixed back-bdb pagedResults ignore control bug
	Fixed back-hdb empty suffix bugs (ITS#3063,3186)
	Fixed slapi internal search limit bugs (ITS#3183)
	Added slapd -l USER/DAEMON options (ITS#3187)
	Build environments
		Fixed back-sql trace builds

OpenLDAP 2.2.13 Release
	Fixed pcache CSN pending segfault (ITS#3180)
	Added libldap cert check extension (ITS#3134)

OpenLDAP 2.2.12 Release
	Fixed slapd empty DN uniqueMember normalization
	Fixed slapd empty DN in proxyAuthx control
	Fixed slapd parsing of auth{cz} "dn:<pat>" rules
	Fixed slapd first component bug (ITS#3118)
	Fixed slapd TOLOWER macro use bug (ITS#3115)
	Fixed slapd TLS context clash bug (ITS#3109)
	Fixed slapd set acl recursion (ITS#3140)
	Fixed slapd entry2mods normalization bug (ITS#3144,3152)
	Fixed slapd extended match memory leak (ITS#3146)
	Fixed slapd syncrepl persist interval issue (ITS#3064)
	Fixed slapd abandon/cancel pending bug (ITS#3160)
	Fixed slapd sl_malloc memory leak (ITS#3155)
	Fixed back-ldap normalization bug 
	Fixed pcache cache_entries init bug (ITS#3150)
	Fixed pcache consistency_check bug (ITS#3151)
	Fixed pcache erroneous reply (ITS#3153)
	Fixed pcache remove_query_data bug (ITS#3170)
	Fixed libldap SASL mutex init bug (ITS#3123)
	Fixed libldap SASL buffering bug (ITS#3139)
	Fixed liblutil passwd seed len bug (ITS#3169)
	Build Environment
		Fixed liblber memory debug portability bug (ITS#3116)
		Fixed back-perl perl portability bug (ITS#2554,2946)

OpenLDAP 2.2.11 Release
	Fixed slapd undefined objectclass bug (ITS#3097)
	Fixed slapd acl dn="" bug
	Updated slapd limits handling
	Build Environment
		Fixed MacOSX sl_free interop bug (ITS#3092)
		Fixed libtool -static bug
		Added Berkeley DB mismatch check

OpenLDAP 2.2.10 Release
	Build Environment